fix: link cleanup, version increment, link audit prep

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 dist
+icons/x128.png
+icons/x192.png
+icons/x64.png
+link_audit/_link_audit_categorized.html
+link_audit/link_audit.csv
+link_audit/_link_audit.csv
