--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,10 @@
     "browser_specific_settings": {
         "gecko": {
             "id": "pigeoncote-tab@infcat.xyz", 
-            "strict_min_version": "100.0"
+            "strict_min_version": "100.0",
+            "data_collection_permissions": {
+                "required": ["none"]
+            }
         }
     },
     "manifest_version": 2
